# vectorizer-napi

./: .gitignore  .npmignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  test.mjs
.github/workflows/: CI.yml
docs/: NAPI-RS.md
src/: embedding.rs  lib.rs
