# vectorizer-napi — Standalone NAPI-RS addon for text embedding
# https://napi.rs/docs/introduction/getting-started

[package]
name = "vectorizer-napi"
version = "0.1.0"
edition = "2021"
description = "Node.js native addon for text embedding via NAPI-RS (rust-bert, all-MiniLM-L6-v2)"
authors = []
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2"
napi-derive = "2"
rust-bert = "0.23"
anyhow = "1"
# indicatif (via rust-bert) needs console with std
console = { version = "0.16", features = ["std"] }
# Use rustls instead of native-tls/OpenSSL to avoid OpenSSL build issues on Windows and musl.
# Overrides transitive reqwest from cached-path (rust-bert).
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }

[build-dependencies]
napi-build = "2"
